correct the wrap of the page

--- a/style.css
+++ b/style.css
@@ -38,8 +38,7 @@ main{
 }
 
 .container{
-    width: 1300px;
-    height: calc(100vh - 170px);
+    width: 95%;
     padding-top: 4rem;
     margin: 0 auto;
 }
@@ -49,7 +48,7 @@ main{
     margin-bottom: 15px;
     margin-right: 7px;
     height: 100px;
-    width: 160px;
+    width: 180px;
     background-image: url("https://picsum.photos/200");
     background-size: cover;
     background-position: center;
